[package]
name = "casper-deploy-generator"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-node = "1.1.1"
casper-execution-engine = "1.1.1"
casper-types = "1.1.1"
hex = "0.4.3"
serde_json = "1.0.64"
serde = { version = "1", features = ["derive"] }