[package]
name = "casper-deploy-generator"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>", "Mateusz Górski <mateusz@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-node = { git = "https://github.com/casper-network/casper-node", tag = "v1.5.4" }
casper-execution-engine = { git = "https://github.com/casper-network/casper-node", tag = "v1.5.4" }
casper-types = { git = "https://github.com/casper-network/casper-node", tag = "v1.5.4" }
casper-hashing = { git = "https://github.com/casper-network/casper-node", tag = "v1.5.4" }
hex = "0.4.3"
serde_json = "1.0.64"
serde = { version = "1", features = ["derive"] }
itertools = "0.10.0"
humantime = "2.1.0"
thousands = "0.2.0"
rand = "0.8.3"
hex_fmt = "0.3.0"
rand_pcg = "0.3.1"
base16 = "0.2.1"
strum = { version = "0.25.0", features = ["derive"] }
